ajustes rotas carros e pilotos

--- a/meusite/equipes/templates/equipes/home.html
+++ b/meusite/equipes/templates/equipes/home.html
@@ -12,5 +12,7 @@
     <div class="page-header">
         <h2>Olá {{ user.first_name }}</h2>
     </div>
-    <a href="equipes/">Equipes Fórmula 1</a>
+    <div style="margin-bottom: 20px;"><a href="equipes/">Gerenciar Equipes</a></div>
+    <div style="margin-bottom: 20px;"><a href="carros/">Gerenciar Carros</a></div>
+    <div style="margin-bottom: 20px;"><a href="pilotos/">Gerenciar Pilotos</a></div>
 {% endblock %}
