--- a/meusite/equipes/templates/equipes/equipes_archive.html
+++ b/meusite/equipes/templates/equipes/equipes_archive.html
@@ -34,7 +34,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for item in latest %}
+        {% for item in equipes %}
             <tr>
                 <td><a href="/equipes/{{ item.pk }}">{{ item.nome }}</a></td>
 
