--- a/meusite/pilotos/templates/pilotos/pilotos_archive.html
+++ b/meusite/pilotos/templates/pilotos/pilotos_archive.html
@@ -31,7 +31,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for item in latest %}
+        {% for item in pilotos %}
             <tr>
                 <td><a href="/pilotos/{{ item.pk }}">{{ item.nome }}</a></td>
                 <td>{{ item.ano|default:"-" }}</td>
