--- a/meusite/pilotos/templates/pilotos/pilotos_archive.html
+++ b/meusite/pilotos/templates/pilotos/pilotos_archive.html
@@ -19,11 +19,11 @@
     </div>
 
     <div class="page_header">
-        <a class="btn btn-success" href="/api/pilotos">API</a>
         <h2>Pilotos</h2>
     </div>
+    <a class="btn btn-success mr-3" href="/api/pilotos">API</a>
+    <a class="btn btn-primary" href="/pilotos/criar/">Adicionar Equipes</a>
     <table class="table">
-        <a class="btn btn-primary" href="/pilotos/criar/">Adicionar Equipes</a>
         <thead>
         <tr>
             <th>Nome</th>
