--- a/meusite/equipes/templates/equipes/home.html
+++ b/meusite/equipes/templates/equipes/home.html
@@ -16,13 +16,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div style="margin-bottom: 20px;"><a href="equipes/list">Gerenciar Equipes</a></div>
+                <div style="margin-bottom: 20px;"><a href="view/equipes">Gerenciar Equipes</a></div>
             </div>
             <div class="col-md-4">
-                <div style="margin-bottom: 20px;"><a href="carros/list">Gerenciar Carros</a></div>
+                <div style="margin-bottom: 20px;"><a href="view/carros">Gerenciar Carros</a></div>
             </div>
             <div class="col-md-4">
-                <div style="margin-bottom: 20px;"><a href="pilotos/list">Gerenciar Pilotos</a></div>
+                <div style="margin-bottom: 20px;"><a href="view/pilotos">Gerenciar Pilotos</a></div>
             </div>
         </div>
     </div>
