--- a/meusite/equipes/templates/equipes/cria_equipe.html
+++ b/meusite/equipes/templates/equipes/cria_equipe.html
@@ -38,7 +38,7 @@
             {% endif %}
         </div>
         {% endfor %}
-    <a class="btn btn-primary" href="/equipes/list/">Cancelar</a>
+    <a class="btn btn-primary" href="/view/equipes">Cancelar</a>
     <button type=submit class="btn btn-primary">Incluir</button>
     </form>
     <script>
