--- a/meusite/carros/templates/carros/cria_carro.html
+++ b/meusite/carros/templates/carros/cria_carro.html
@@ -38,7 +38,7 @@
             {% endif %}
         </div>
         {% endfor %}
-    <a class="btn btn-primary" href="/carros/list/">Cancelar</a>
+    <a class="btn btn-primary" href="/view/carros/">Cancelar</a>
     <button type=submit class="btn btn-primary">Incluir</button>
     </form>
     <script>
