--- a/meusite/pilotos/templates/pilotos/cria_piloto.html
+++ b/meusite/pilotos/templates/pilotos/cria_piloto.html
@@ -38,7 +38,7 @@
             {% endif %}
         </div>
         {% endfor %}
-    <a class="btn btn-primary" href="/pilotos/list/">Cancelar</a>
+    <a class="btn btn-primary" href="/view/pilotos/">Cancelar</a>
     <button type=submit class="btn btn-primary">Incluir</button>
     </form>
     <script>
