--- a/meusite/equipes/templates/base.html
+++ b/meusite/equipes/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html lang="pt">
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
@@ -14,18 +15,27 @@
 
 
     </head>
-    <body>
-        
+    <body style="background: url('{% static 'imagens/fundo.jpg' %}') no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;">
+
         <div class="container">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
-                    <div class="navbar-header">
-                        <h1>Gerenciador de Equipes [ Fórmula 1 ] </h1>
+                    <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                        <div style="width: 100%; text-align: center;">
+                            <h1>Gerenciador Fórmula 1</h1>
+                        </div>
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'logout' %}" class="btn btn-default btn-sm" style="color:brown; font-weight: bold;">LOG OUT</a>
+                        {% endif %}
                     </div><!-- navbar-header -->
                 </div><!-- container-fluid -->
             </nav> <!-- Navbar -->
 
-            <div class="jumbotron">
+            <div class="jumbotron" style="background-color: rgba(255, 255, 255, 0.78);">
                 {% block content %}
                 {% endblock %}
             </div><!-- jambotron-->
