--- a/meusite/equipes/templates/equipes/home.html
+++ b/meusite/equipes/templates/equipes/home.html
@@ -7,9 +7,7 @@
     font-size: 10px;
     line-height: 1.5;
     margin-bottom: -70;
-  "
->
-  <a href="{% url 'logout' %}" class="btn btn-primary btn-sm">LOG OUT</a>
+  ">
 </div>
 
 <div class="page-header">
@@ -19,17 +17,17 @@
   <div class="row">
     <div class="col-12 col-md-4">
       <div style="margin-bottom: 20px; text-align: center">
-        <a href="view/equipes" class="btn btn-success">Gerenciar Equipes</a>
+        <a href="view/equipes" class="btn btn-primary" style="font-weight: bold;">Gerenciar Equipes</a>
       </div>
     </div>
     <div class="col-12 col-md-4">
       <div style="margin-bottom: 20px; text-align: center">
-        <a href="view/carros" class="btn btn-success">Gerenciar Carros</a>
+        <a href="view/carros" class="btn btn-primary" style="font-weight: bold;">Gerenciar Carros</a>
       </div>
     </div>
     <div class="col-12 col-md-4">
       <div style="margin-bottom: 20px; text-align: center">
-        <a href="view/pilotos" class="btn btn-success">Gerenciar Pilotos</a>
+        <a href="view/pilotos" class="btn btn-primary" style="font-weight: bold;">Gerenciar Pilotos</a>
       </div>
     </div>
   </div>
