ajuste do botão Voltar na tela API e inclusão de breadcrumb nas telas.

--- a/meusite/carros/templates/carros/carros_archive.html
+++ b/meusite/carros/templates/carros/carros_archive.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+{% block breadcrumb %}
+    <li class="breadcrumb-item active" aria-current="page">Carros</li>
+{% endblock %}
+{% block content %}
 <style>
   .btn-extra-small {
     padding: 0px 2px;
