--- a/meusite/equipes/templates/equipes/equipes_archive.html
+++ b/meusite/equipes/templates/equipes/equipes_archive.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item active" aria-current="page">Equipes</li>
+{% endblock %}
 {% block content %}
     <style>
         .btn-extra-small {
