--- a/meusite/equipes/templates/equipes/edita_equipe.html
+++ b/meusite/equipes/templates/equipes/edita_equipe.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item"><a href="/view/equipes" style="color: rgb(164, 64, 64);">Equipes</a></li>
+    <li class="breadcrumb-item"><a href="/view/equipes/detail/{{ equipe.pk }}" style="color: rgb(164, 64, 64);">Detalhes</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Editar</li>
+{% endblock %}
 {% block content %}
 <div style="
     display: flex; 
