--- a/meusite/equipes/templates/equipes/equipes_detail.html
+++ b/meusite/equipes/templates/equipes/equipes_detail.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item"><a href="/view/equipes" style="color: rgb(164, 64, 64);">Equipes</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Detalhes</li>
+{% endblock %}
 {% block content %}
     <style>
         .button-container {
