--- a/meusite/pilotos/templates/pilotos/cria_piloto.html
+++ b/meusite/pilotos/templates/pilotos/cria_piloto.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item"><a href="/view/pilotos" style="color: rgb(164, 64, 64);">Pilotos</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Criar</li>
+{% endblock %}
 {% block content %}
 {% if messages %}
     <div class="messages">
