--- a/meusite/pilotos/templates/pilotos/pilotos_archive.html
+++ b/meusite/pilotos/templates/pilotos/pilotos_archive.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item active" aria-current="page">Pilotos</li>
+{% endblock %}
 {% block content %}
     <style>
         .btn-extra-small {
