Alteracoes na branch secundaria

--- a/meusite/equipes/templates/equipes/home.html
+++ b/meusite/equipes/templates/equipes/home.html
@@ -12,6 +12,7 @@
 
 <div class="page-header">
   <h2>Olá {{ user.first_name }}</h2>
+  <a href="/admin" class="btn btn-primary" style="font-weight: bold;">Administrador</a>
 </div>
 <div class="container">
   <div class="row">
